@@ -106,6 +106,7 @@ Cacti CHANGELOG
 -feature#5305: Remove files aggregate_items.php and color_templates_items.php and consolidate into their parents
 -feature#5316: Allow for searching in settings/menu
 -feature#5321: cli/push_out_hosts.php is deprecated, redirect to rebuild_poller.cache.php
+-feature#5328: Search through Data Query fields when searching for Graphs in Tree
 -feature#5368: Allow all key searching calls to be delayed by defined amount
 -feature#5378: When reload page in browser with graphs created scroll window always return to top
 -feature#5406: Cacti connection handling should forcibly close connections to work around PDO uncertainty
